--- a/src/main/java/GUI/ImportGUI.form
+++ b/src/main/java/GUI/ImportGUI.form
@@ -19,7 +19,7 @@
           <Component id="jScrollPane2" alignment="0" pref="597" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
-              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+              <Component id="import_btn" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -27,7 +27,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+              <Component id="import_btn" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="291" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
@@ -43,18 +43,24 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="customer_table">
+        <Component class="javax.swing.JTable" name="import_table">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
+              <Table columnCount="5" rowCount="4">
                 <Column editable="true" title="Ma" type="java.lang.String"/>
-                <Column editable="true" title="Ten" type="java.lang.String"/>
-                <Column editable="true" title="Ho" type="java.lang.String"/>
-                <Column editable="true" title="SDT" type="java.lang.Object"/>
+                <Column editable="true" title="Ten SP" type="java.lang.String"/>
+                <Column editable="true" title="Nha SX" type="java.lang.String"/>
+                <Column editable="true" title="SDT" type="java.lang.String"/>
+                <Column editable="true" title="Tong Tien" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -84,59 +90,59 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="import_btn">
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                          <Component id="lastname_lab" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="lastname" min="-2" pref="135" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                          <Component id="firstname_lb" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="create" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                          <Component id="update" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="121" max="32767" attributes="0"/>
-                          <Component id="searchlb" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                          <Component id="search_txt" min="-2" pref="109" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <EmptySpace min="0" pref="79" max="32767" attributes="0"/>
+                  <Component id="searchlb" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                  <Component id="search_txt" min="-2" pref="109" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="firstname" min="-2" pref="135" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
-                          <Component id="delete_btn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="refresh" min="-2" max="-2" attributes="0"/>
-                      </Group>
                       <Component id="search_btn" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="total_price_lb" min="-2" max="-2" attributes="0"/>
+                              <Component id="manu_lb" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="manu_txt" pref="59" max="32767" attributes="0"/>
+                              <Component id="total_price_txt" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="35" max="32767" attributes="0"/>
+                  <EmptySpace pref="119" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="137" max="-2" attributes="0"/>
-                  <Component id="lastname_lb" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="quantity_lb" min="-2" max="-2" attributes="0"/>
+                      <Component id="product_lb" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="quantity_txt" min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="product_id" alignment="1" min="-2" pref="58" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="137" max="32767" attributes="0"/>
-                  <Component id="phone_lb" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="phone_txt" min="-2" pref="135" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="160" max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="137" max="-2" attributes="0"/>
+                          <Component id="lastname_lb" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="184" max="-2" attributes="0"/>
+                          <Component id="create" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace pref="179" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -147,23 +153,20 @@
                   <Component id="lastname_lb" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lastname" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="lastname_lab" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="firstname_lb" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="firstname" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="product_id" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="product_lb" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="manu_lb" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="manu_txt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="phone_txt" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="phone_lb" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="quantity_txt" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="quantity_lb" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="total_price_txt" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="total_price_lb" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="update" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="delete_btn" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="refresh" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="create" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="create" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="searchlb" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -176,9 +179,9 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="lastname">
+        <Component class="javax.swing.JTextField" name="product_id">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lastnameActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="product_idActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lastname_lb">
@@ -186,46 +189,30 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Quan Ly Khach Hang"/>
+            <Property name="text" type="java.lang.String" value="Quan Ly Nhap Hang"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="firstname">
+        <Component class="javax.swing.JTextField" name="manu_txt">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="firstnameActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="manu_txtActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="lastname_lab">
+        <Component class="javax.swing.JLabel" name="product_lb">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ho"/>
+            <Property name="text" type="java.lang.String" value="MaSP"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="firstname_lb">
+        <Component class="javax.swing.JLabel" name="manu_lb">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ten"/>
+            <Property name="text" type="java.lang.String" value="Ma NSX"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="create">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Tao "/>
+            <Property name="text" type="java.lang.String" value="Nhap Hang"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="createActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="update">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Cap Nhat"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="delete_btn">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Xoa"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="delete_btnActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="search_txt">
@@ -243,22 +230,24 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="search_btnActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="refresh">
+        <Component class="javax.swing.JTextField" name="quantity_txt">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="quantity_txtActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="quantity_lb">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Refresh"/>
+            <Property name="text" type="java.lang.String" value="So Luong"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="total_price_txt">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="total_price_txtActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="phone_txt">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="phone_txtActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="phone_lb">
+        <Component class="javax.swing.JLabel" name="total_price_lb">
           <Properties>
-            <Property name="text" type="java.lang.String" value="SDT"/>
+            <Property name="text" type="java.lang.String" value="Tong Tien"/>
           </Properties>
         </Component>
       </SubComponents>
